Nota fiscal erro em json desserialize datas

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -83,6 +83,9 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" th:href="@{/admin/users}">Gerenciamento de Usuários</a></li>
                     </ul>
+                     <li class="nav-item">
+                    <a class="nav-link" sec:authorize="hasRole('MANAGER')" href="/notas-fiscais/cadastrar">Notas Fiscais</a>
+                </li>
                 </li>
             </ul>
             
