--- a/src/main/resources/templates/nota/nota_cadastro.html
+++ b/src/main/resources/templates/nota/nota_cadastro.html
@@ -1,87 +1,86 @@
 <!-- nota_cadastro.html -->
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
-    <meta charset="UTF-8">
-    <title>Cadastro de Nota Fiscal</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<meta charset="UTF-8">
+<title>Cadastro de Nota Fiscal</title>
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+	rel="stylesheet">
 </head>
 <body>
-<div th:replace="~{navbar :: menu-principal}"></div>
+	<div th:replace="~{navbar :: menu-principal}"></div>
 
-<div class="container">
-    <h2>Cadastro de Nota Fiscal</h2>
-    <form th:action="@{/notas/salvar}" th:object="${nota}" method="post">
-        <!-- Outros campos aqui -->
-
-        <div class="form-group">
-            <label for="portaria">Portaria</label>
-            <select id="portaria" th:field="*{portaria}" class="form-control" required>
-                <option th:each="portaria : ${portarias}" th:value="${portaria}" th:text="${portaria.descricao}"></option>
-            </select>
-        </div>
-
-        <div class="form-group">
-            <label for="faixaHorario">Faixa de Horário</label>
-            <select id="faixaHorario" th:field="*{faixaHorario}" class="form-control" required>
-                <option th:each="faixa : ${faixasHorarios}" th:value="${faixa}" th:text="${faixa.descricao}"></option>
-            </select>
-        </div>
-
-        <div class="form-group">
-            <label for="tipoVeiculo">Tipo de Veículo</label>
-            <select id="tipoVeiculo" th:field="*{tipoVeiculo}" class="form-control" required>
-                <option th:each="tipo : ${tiposVeiculos}" th:value="${tipo}" th:text="${tipo.descricao}"></option>
-            </select>
-        </div>
-
-        <div class="form-group">
-            <label for="localDestino">Local de Destino</label>
-            <select id="localDestino" th:field="*{localDestino}" class="form-control" required>
-                <option th:each="local : ${locaisDestinos}" th:value="${local}" th:text="${local.descricao}"></option>
-            </select>
-        </div>
+	<div class="container">
+		<h2>Cadastro de Nota Fiscal</h2>
+		<form th:action="@{/notas/salvar}" th:object="${nota}" method="post">
+			<!-- Outros campos aqui -->
 
 			<div class="form-group">
-            <label for="municipio">Municipio</label>
-            <select id="municipio" th:field="*{municipio}" class="form-control" required>
-                <option th:each="municipio : ${municipios}" th:value="${municipio}" th:text="${municipio.nome}"></option>
-            </select>
-        </div>
-        
+				<label for="portaria">Portaria</label> <select id="portaria"
+					th:field="*{portaria}" class="form-control" required>
+					<option th:each="portaria : ${portarias}" th:value="${portaria}"
+						th:text="${portaria}"></option>
+				</select>
+			</div>
 
-        <div class="form-group">
-            <label for="numeroDaNotaFiscal">Número da Nota Fiscal</label>
-            <input type="text" id="numeroDaNotaFiscal" th:field="*{numeroDaNotaFiscal}" class="form-control" required />
-        </div>
+			<div class="form-group">
+				<label for="data">Data</label> <input type="date" id="data"
+					th:field="*{data}" class="form-control" required>
+			</div>
 
-        <div class="form-group">
-            <label for="dataCaptura">Data de Captura</label>
-            <input type="date" id="dataCaptura" th:field="*{dataCaptura}" class="form-control" required />
-        </div>
+			<div class="form-group">
+				<label for="faixaHorario">Faixa de Horário</label> <select
+					id="faixaHorario" th:field="*{faixaHorario}" class="form-control"
+					required>
+					<option th:each="faixaHorario : ${faixasHorarios}"
+						th:value="${faixaHorario}" th:text="${faixaHorario}"></option>
+				</select>
+			</div>
 
-        <div class="form-group">
-            <label for="dataEmissao">Data de Emissão</label>
-            <input type="date" id="dataEmissao" th:field="*{dataEmissao}" class="form-control" />
-        </div>
+			<div class="form-group">
+				<label for="tipoVeiculo">Tipo de Veículo</label> <select
+					id="tipoVeiculo" th:field="*{tipoVeiculo}" class="form-control"
+					required>
+					<option th:each="tipoVeiculo : ${tiposVeiculos}"
+						th:value="${tipoVeiculo}" th:text="${tipoVeiculo}"></option>
+				</select>
+			</div>
 
-        <div class="form-group">
-            <label for="cnpjEmissor">CNPJ Emissor</label>
-            <input type="text" id="cnpjEmissor" th:field="*{cnpjEmissor}" class="form-control" />
-        </div>
+			<div class="form-group">
+				<label for="localDestino">Local de Destino</label> <select
+					id="localDestino" th:field="*{localDestino}" class="form-control"
+					required>
+					<option th:each="localDestino : ${locaisDestinos}"
+						th:value="${localDestino}" th:text="${localDestino}"></option>
+				</select>
+			</div>
 
-        <div class="form-group">
-            <label for="permissionario">Destinatário</label>
-            <select id="permissionario" th:field="*{permissionario}" class="form-control" required>
-            	<option th:each="permissionario : ${permissionarios}" th:value="${permissionario}" th:text="${permissionario.cnpj}"></option>
-            </select>
-            
-        </div>
+			<select id="municipio" th:field="*{municipio.ibge}"
+				class="form-control" required>
+				<option th:each="municipio : ${municipios}"
+					th:value="${municipio.ibge}" th:text="${municipio.nome}"></option>
+			</select>
 
-        <button type="submit" class="btn btn-primary">Salvar</button>
-    </form>
-</div>
+	 <!-- Campos para um único produto (propriedade) -->
+            <h3>Produtos</h3>
+            <div class="form-group">
+                <label for="propriedade">Propriedade</label> 
+                <select id="propriedade" th:field="*{itens[0].propriedade.id}" class="form-control" required>
+                    <option th:each="propriedade : ${propriedades}" th:value="${propriedade.id}" th:text="${propriedade.variedade}"></option>
+                </select>
+            </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+            <div class="form-group">
+                <label for="quantidade">Quantidade</label> 
+                <input type="number" id="quantidade" th:field="*{itens[0].quantidade}" class="form-control" required>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
